Fixing login and register boxes style

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,14 @@ md-whiteframe {
   border-radius: 5px;
 }
 
+md-content {
+  background-color: #FFFFFF;
+}
+
+label {
+  text-align: left;
+}
+
 .kanban-list {
   padding: 5dp;
   margin: 2%;
